--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Spike Milligan
 	</div>
 	
 <p style="text-align:center; vertical-align: middle;padding-top:1em;">
-Web design by <a href="mailto:david@flatnet.net">David Foale</a> for <a href="http://www.alliscalm.net"><em>alliscalm</em> web services.</a><br/>
+Web design by <a href"Kim Foale">Kim Foale</a> for <a href="http://www.alliscalm.net"><em>alliscalm</em> web services.</a><br/>
 <a href="http://validator.w3.org/check?uri=referer"><img
         src="http://www.w3.org/Icons/valid-xhtml10"
         alt="Valid XHTML 1.0 Strict" height="31" width="88" style="border:0;" /></a>
